Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -5,7 +5,13 @@
   <title>Basketball Team Signup</title>
  </head>
  <body>
+   <h1> Create a Basketball Team!</h1>
+     <form method="POST" action="/team">
+      Team name:
+      <input id="name" type="text" name="string">
+      Coach
+      <input id="coach" type="text" name="string">
+      <input type="submit">
+    </form>
  </body>
 </html>
-
-
