Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -13,6 +13,21 @@
       Coach
       <input id="coach" type="text" name="string">
       <br>
+      Point Guard:
+      <input id="pg" type="text" name="string">
+      <br>
+      Shooting Guard:
+      <input id="sg" type="text" name="string">
+      <br>
+      Small Forward:
+      <input id="sf" type="text" name="string">
+      <br>
+      Power Forward:
+      <input id="pf" type="text" name="string">
+      <br>
+      Center:
+      <input id="c" type="text" name="string">
+      <br>
       <input type="submit">
     </form>
  </body>
