--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -6,7 +6,7 @@
  </head>
  <body>
    <h1> Create a Basketball Team!</h1>
-     <form method="POST" action="/team">
+     <form method="POST" action="/newteam">
       Team name:
       <input id="name" type="text" name="string">
       <br>
