Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -8,25 +8,25 @@
    <h1> Create a Basketball Team!</h1>
      <form method="POST" action="/newteam">
       Team name:
-      <input id="name" type="text" name="string">
+      <input type="text" name="name">
       <br>
       Coach
-      <input id="coach" type="text" name="string">
+      <input type="text" name="coach">
       <br>
       Point Guard:
-      <input id="pg" type="text" name="string">
+      <input type="text" name="pg">
       <br>
       Shooting Guard:
-      <input id="sg" type="text" name="string">
+      <input type="text" name="sg">
       <br>
       Small Forward:
-      <input id="sf" type="text" name="string">
+      <input type="text" name="sf">
       <br>
       Power Forward:
-      <input id="pf" type="text" name="string">
+      <input type="text" name="pf">
       <br>
       Center:
-      <input id="c" type="text" name="string">
+      <input type="text" name="c">
       <br>
       <input type="submit">
     </form>
