Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -28,7 +28,7 @@
       Center:
       <input type="text" name="c">
       <br>
-      <input type="submit" id="submit">
+      <input type="submit" id="Submit">
     </form>
  </body>
 </html>
